<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/home"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.a1631088057.condomine.activities.Condomine_Activity">


    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="E-mail"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="Senha"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:typeface="monospace" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOK"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btn_confirmar" />

        <Button
            android:id="@+id/btnCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btn_cadastrar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLoginGoogle"
            android:layout_weight="0.5"
            android:drawableLeft="@drawable/googleg_standard_color_18"
            android:paddingLeft="50dp"
            android:gravity="center_vertical"
            android:drawablePadding="30dp"
            android:contentDescription="@string/btn_loginGoogle"
            android:text="@string/btn_loginGoogle" />

        <com.facebook.login.widget.LoginButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLoginFacebook"
            android:layout_weight="0.5"
            android:contentDescription="@string/btn_loginFacebook"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
        />
    </LinearLayout>


</LinearLayout>
