<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.a1631088057.condomine.activities.Atualiza_Activity"
    android:weightSum="1">


    <ImageView
        android:id="@+id/imageUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/user512"
        android:layout_weight="0.38" />

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nome Completo"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:enabled="false"
        android:ems="10"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/txtFone"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Telefone"
            android:maxLength="11"
            android:inputType="phone" />
        <EditText
            android:id="@+id/txtCEP"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="CEP"
            android:inputType="number"
            android:maxLength="8"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/txtCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Cidade"
            android:ems="8"
            android:enabled="false"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtSenha"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Senha"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtConfirmaSenha"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Redigite Senha"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnImagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_imagem" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnOK"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_confirmar" />

        <Button
            android:id="@+id/btnCancela"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancelar" />
    </LinearLayout>

</LinearLayout>